Fix dark mode style

--- a/src/app.css
+++ b/src/app.css
@@ -193,4 +193,7 @@ body {
   .logpage-header {
     border-bottom: 1px solid #424242;
   }
+  .logpage-body .logpage-logtitle:not(:first-child) {
+    border-top: 1px solid #424242;
+  }
 }
